Fix left toolbar padding causing misalignment

--- a/src/style.css
+++ b/src/style.css
@@ -70,5 +70,4 @@ h1 {
   flex-direction: column;
   align-items: center;
   row-gap: 10px;
-  padding-top: 10px;
 }
